--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
   "name": "rqdb",
   "version": "0.0.1",
+  "type": "module",
   "description": "Unofficial client library for rqlite",
-  "main": "index.ts",
-  "scripts": {
-    "test": "jest"
-  },
+  "main": "src/index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tjstretchalot/tsrqdb.git"
+  },
+  "scripts": {
+    "test": "jest"
   },
   "keywords": [
     "TypeScript",
     "rqlite"
   ],
+  "peerDependencies": {
+    "chalk": "^5.3.0"
+  },
+  "peerDependenciesMeta": {
+    "chalk": {
+      "optional": true
+    }
+  },
   "author": "Timothy Moore",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/tjstretchalot/tsrqdb/issues"
   },
-  "homepage": "https://github.com/tjstretchalot/tsrqdb#readme"
+  "homepage": "https://github.com/tjstretchalot/tsrqdb#readme",
+  "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
+  }
 }
