--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rqdb",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "description": "Unofficial client library for rqlite",
   "main": "dist/rqdb.js",
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "copy-webpack-plugin": "^11.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
